# salvo-shuttle-hello

./: .env  Cargo.toml  deploy.sh  disesel_setup  run.sh
migrations/2023-03-24-001656_create_posts/: up.sql
src/: main.rs
src/db/: mod.rs  models.rs
src/user/controllers/: get.rs  helpers.rs  mod.rs  types.rs
