[package]
name = "rust"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.12.0"
salvo = "0.37.9"
shuttle-salvo = "0.12.0"
tokio = "1.26.0"
serde = { version = "1.0", features = ["derive"] }
try-catch = "0.2.2"
serde_json = "1.0.94"
once_cell = "1.17.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
